--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/nodemailer": "^6.4.17",
-    "axios": "^1.10.0",
-    "date-fns": "^4.1.0",
-    "firebase": "^11.10.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "next": "15.3.5",
-    "nodemailer": "^7.0.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0"
+    "firebase": "^10.7.1",
+    "react-hot-toast": "^2.4.1",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/nodemailer": "^6.4.14",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8",
+    "eslint-config-next": "15.3.5"
   }
 }
