--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
+    "firebase-admin": "^13.4.0",
+    "next": "15.3.5",
+    "nodemailer": "^6.9.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "next": "15.3.5",
-    "firebase": "^10.7.1",
-    "react-hot-toast": "^2.4.1",
-    "nodemailer": "^6.9.7"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/nodemailer": "^6.4.14",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "15.3.5"
+    "eslint-config-next": "15.3.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
