--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/web-push": "^3.6.4",
     "firebase": "^10.7.1",
     "firebase-admin": "^13.4.0",
     "next": "15.3.5",
     "nodemailer": "^6.9.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/node": "^20",
